k8s-ingress/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: cyo-practica2
spec:
  selector:
    matchLabels:
      app: cyo-practica2
  replicas: 1
  template:
    metadata:
      labels:
        app: cyo-practica2
        server: worker
    spec:
      securityContext:
        runAsUser: 1001
      containers:
      - name: worker
        image: franco87/mca-cyo-worker
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
