k8s-ingress/mongo.yml
kind: Service
apiVersion: v1
metadata:
  name:  mongo
  labels:
    app: cyo-practica2
  namespace: default
spec:
  selector:
    app:  cyo-practica2
    server: mongo
  type:  ClusterIP
  ports:
  - port:  27017
    targetPort:  27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: cyo-practica2
  namespace: default
spec:
  selector:
    matchLabels:
      app: cyo-practica2
  template:
    metadata:
      labels:
        app: cyo-practica2
        server: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.2
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name:  pvc-mongo-500m
          mountPath:  /data/db
      restartPolicy: Always
      volumes:
      - name:  pvc-mongo-500m
        persistentVolumeClaim:
            claimName: pvc-mongo-500m
