k8s-ingress/mysql.yml
kind: Service
apiVersion: v1
metadata:
  name:  mysql
  labels:
    app: cyo-practica2
  namespace: default
spec:
  selector:
    app: cyo-practica2
    server: mysql
  type:  ClusterIP
  ports:
  - port:  3306
    targetPort:  3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: cyo-practica2
  namespace: default
spec:
  selector:
    matchLabels:
      app: cyo-practica2
  template:
    metadata:
      labels:
        app: cyo-practica2
        server: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name:  pvc-mysql-500m
          mountPath:  /var/lib/mysql
      restartPolicy: Always
      volumes:
      - name:  pvc-mysql-500m
        persistentVolumeClaim:
            claimName: pvc-mysql-500m
