k8s-ingress/server-ingress.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
  - host: mastercloudapps.es
    http:
      paths:
      - path: /server(/|$)(.*)
        backend:
          serviceName: server
          servicePort: 8080
      - path: /(.*)
        backend:
          serviceName: server
          servicePort: 8080



---

kind: Service
apiVersion: v1
metadata:
  name:  server
  labels:
    app: cyo-practica2
  namespace: default
spec:
  selector:
    app: cyo-practica2
    server: server
  type:  ClusterIP
  ports:
  - name:  http-alt
    port:  8080
    targetPort:  8080

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
  namespace: default
  labels:
    app: cyo-practica2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cyo-practica2
        server: server
    spec:
      containers:
      - name: server
        image: franco87/mca-cyo-server
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort: 8080
